--- a/index.html
+++ b/index.html
@@ -39,15 +39,6 @@ sitemap:
 						<a href="{{ "/" | absolute_url }}" class="logo">{{site.title}}</a>
 					</header>
 
-					<!-- Nav -->
-					<nav id="nav">
-						<ul class="icons">
-			              <li><a href="https://twitter.com/sunbingfeng2" class="icon fa-twitter" rel="nofollow"><span class="label">Twitter</span></a></li>
-			              <li><a href="https://facebook.com/sun.bill.3" class="icon fa-facebook" rel="nofollow"><span class="label">Facebook</span></a></li>
-			              <li><a href="https://github.com/sunbingfeng" class="icon fa-github" rel="nofollow"><span class="label">GitHub</span></a></li>
-						</ul>
-					</nav>
-
 				<!-- Main -->
 					<div id="main">
 						<!-- Featured Post -->
@@ -86,6 +77,12 @@ sitemap:
   								</article>
                   {% endif %}
                 {% endfor %}
+			                  <article>
+									<ul class="actions">
+					                  <li><a href="{{ "/blog/" | absolute_url }}" class="button">Read more</a></li>
+					                </ul>                  				
+
+  							</article>
 
 							</section>
 					</div>
