--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
 layout: null
-title: Bill Tech Blog
-description: One small step to make difference
+title: Bill's Tech Blog
+description: tech posts in-summary
 sitemap:
     priority: 1.0
-    lastmod: 2017-11-02
+    lastmod: 2018-03-12
     changefreq: weekly
 ---
 <!DOCTYPE HTML>
@@ -29,9 +29,9 @@ sitemap:
 					<div id="intro">
             <h1>{{site.title}}</h1>
 						<h2>Small step to make difference</h2>
-<!-- 						<ul class="actions">
+						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
-						</ul> -->
+						</ul>
 					</div>
 
 				<!-- Header -->
