--- a/index.html
+++ b/index.html
@@ -16,13 +16,8 @@ sitemap:
 -->
 
 <head>
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-	<link rel="manifest" href="/site.webmanifest">
-	<meta name="msapplication-TileColor" content="#da532c">
-	<meta name="theme-color" content="#ffffff">
-</head>>
+	<title>Bill's Tech Blog</title>
+</head>
 
 <html>
 	<head>
@@ -79,18 +74,10 @@ sitemap:
   										<li><a href="{{ post.url | absolute_url }}" class="button">Full Story</a></li>
   									</ul>
   								</article>
-                  {% if mod3 == 0 %}
-                  <article>
-									<ul class="actions">
-					                  <li><a href="{{ "/blog/" | absolute_url }}" class="button">Read more</a></li>
-					                </ul>                  				
-
-  								</article>
-                  {% endif %}
                 {% endfor %}
 			                  <article>
 									<ul class="actions">
-					                  <li><a href="{{ "/blog/" | absolute_url }}" class="button">Read more</a></li>
+					                  <li><a href="{{ "/blog" | absolute_url }}" class="button">Read more</a></li>
 					                </ul>                  				
 
   							</article>
