add week-1 ARTS

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@ Jekyll integration by somiibo.com
             </article>
             <!-- Posts -->
             <section class="posts">
-                {% for post in site.posts limit:3 %} {% assign mod3 = forloop.index | modulo: 3 %}
+                {% for post in site.posts limit:5 %} {% assign mod3 = forloop.index | modulo: 5 %}
                 <article>
                     <header>
                         <span class="date">{{ post.date | date_to_string }}</span>
                         <h2><a href="{{ post.url | absolute_url }}">{{ post.title }}</h2>
                     </header>
-                    <a href="{{ post.url | absolute_url }}" class="image main"><img src="{{ post.image | absolute_url }}" alt="" /></a>
+                    <!-- <a href="{{ post.url | absolute_url }}" class="image main"><img src="{{ post.image | absolute_url }}" alt="" /></a> -->
                     <p>{{ post.excerpt }}</p>
                     <ul class="actions">
                         <li><a href="{{ post.url | absolute_url }}" class="button">Full Story</a></li>
