--- a/index.html
+++ b/index.html
@@ -66,8 +66,16 @@ Jekyll integration by somiibo.com
                         <span class="date">{{ post.date | date_to_string }}</span>
                         <h2><a href="{{ post.url | absolute_url }}">{{ post.title }}</h2>
                     </header>
-                    <!-- <a href="{{ post.url | absolute_url }}" class="image main"><img src="{{ post.image | absolute_url }}" alt="" /></a> -->
-                    <p>{{ post.excerpt }}</p>
+                    
+                    <span>[
+                    {% for tag in post.tags %}
+                        {% capture tag_name %}{{ tag }}{% endcapture %}
+                        <i><nobr>{{ tag_name }}</nobr>&nbsp;</i>
+                    {% endfor %}
+                    ]</span>
+                    
+                    <p style="text-align: center;" >{{ post.excerpt }}</p>  
+
                     <ul class="actions">
                         <li><a href="{{ post.url | absolute_url }}" class="button">Full Story</a></li>
                     </ul>
