upload ARTS-Week 10

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Jekyll integration by somiibo.com
             <!-- Featured Post -->
             <article class="post featured">
                 <header class="major">
-                    <h2><a href="#">Fighting 2018</a></h2>
+                    <h2><a href="#">Fighting!</a></h2>
                     <p>Everything around you that you call life was made up by people that were no smarter than you and you can change it, you can influence it, you can build your own things that other people can use.</p>
                 </header>
             </article>
