--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ Jekyll integration by somiibo.com
 
 <head>
     {% include head.html %}
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 
 <body class="is-loading">
@@ -44,9 +45,9 @@ Jekyll integration by somiibo.com
         <nav id="nav">
             {% include nav.html %}
             <ul class="icons">
-                <li><a href="https://twitter.com/{{site.twitter}}" class="icon fa-twitter" rel="nofollow"><span class="label">Twitter</span></a></li>
-                <li><a href="https://facebook.com/{{site.facebook}}" class="icon fa-facebook" rel="nofollow"><span class="label">Facebook</span></a></li>
-                <li><a href="https://github.com/{{site.github}}" class="icon fa-github" rel="nofollow"><span class="label">GitHub</span></a></li>
+                <li><a href="https://twitter.com/{{site.twitter}}" rel="nofollow"><i class="fab fa-twitter-square fa-2x"></i></a></li>
+                <li><a href="https://dev.to/sunbingfeng" rel="nofollow"><i class="fab fa-dev fa-2x"></i></a></li>
+                <li><a href="https://github.com/{{site.github}}" rel="nofollow"><i class="fab fa-github-square fa-2x"></i></a></li>
             </ul>
         </nav>
         <!-- Main -->
