--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@ Jekyll integration by somiibo.com
         <!-- Main -->
         <div id="main">
             <!-- Featured Post -->
-            <article class="post featured">
+<!--             <article class="post featured">
                 <header class="major">
                     <h2><a href="#">Fighting!</a></h2>
                     <p>Everything around you that you call life was made up by people that were no smarter than you and you can change it, you can influence it, you can build your own things that other people can use.</p>
                 </header>
-            </article>
+            </article> -->
             <!-- Posts -->
             <section class="posts">
                 {% for post in site.posts limit:5 %} {% assign mod3 = forloop.index | modulo: 5 %}
