Fix newsletter style

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
                 {% endfor %}
                 <article>
                     <ul class="actions">
-                        <li style="padding: 8em;"><a href="{{ "/blog/" | absolute_url }}" class="button">Read more</a></li>
+                        <li style="padding: 8em 0em;"><a href="{{ "/blog/" | absolute_url }}" class="button">Read more</a></li>
                     </ul>
                 </article>
             </section>
