--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 -->
 <head>
     <title>Bill's Tech Blog</title>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 </head>
 <html>
     <head>
