deploy: 677d264289883dc71c7d738a4fe8b1927d91f549

--- a/elements/index.html
+++ b/elements/index.html
@@ -426,7 +426,11 @@
     </header>
 
     <main class="main-content">
-        <style>
+        <!-- DEBUG: Page Layout Loaded -->
+<div style="background: #0000ff; color: white; padding: 10px; margin: 10px 0; font-family: monospace; font-size: 14px; font-weight: bold;">
+    ⚠️ PAGE LAYOUT IS LOADED ⚠️
+</div>
+<style>
     .page-header {
         background: linear-gradient(135deg, var(--gradient-start), var(--gradient-end));
         color: white;
